made changes throughout and added pics

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
 </head>
 <body>
 
+    <header>
+<h3 id="message1"></h3>
+<nav>
+<a href="index.html">Home</a>
+<a href="fortune.html">Play</a>
+<a href="shop.html">Shop</a>
 
 
+</nav>
+<h1>Kanie-Kandies</h1>
+</header>
 
+<main>
+    <img id="carousel-cbd" width="430" height="350">
+</main>
     <!--external js-->
     <script src="assets/app.js"></script>
 </body>
